# Component-Warehouse

./: .gitignore  BOM_OEM-Ethernet-G11_2026-03-08.csv  README.md  app.py  component_structure.py  config.py  forms.py  models.py  pyproject.toml  requirements.txt  ТЗ_CRM_САУК.md
app/: __init__.py  cli.py  forms.py  models.py
app/blueprints/: api.py  auth.py  bom.py  catalog.py  components.py  groups.py  library.py  main.py  orders.py  tools.py  users.py
app/templates/: archive.html  base.html  bom_import.html  bom_match.html  component_edit.html  component_form.html  component_history.html  component_view.html  components.html  error.html  group_edit.html  group_form.html  groups.html  housing_form.html  housings.html  library.html  library_form.html  login.html  orders.html  produce_result.html  product_view.html  products.html  register.html  subgroup_form.html  subgroups.html  tools.html  type_form.html  types.html  user_edit.html  user_form.html  users.html
templates/: archive.html  base.html  component_edit.html  component_form.html  component_history.html  components.html  error.html  group_edit.html  group_form.html  groups.html  housing_form.html  housings.html  login.html  orders.html  register.html  subgroup_form.html  subgroups.html  type_form.html  types.html  user_edit.html  user_form.html  users.html
